# StorySeedClassroom

./: .gitattributes  .gitignore  LICENSE.md  README.md  START_StorySeed_WINDOWS.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  prompt_feedback.yml
.github/workflows/: tests.yml
docs/: GITHUB_FEEDBACK.md  RELEASE_CHECKLIST.md  SELF_TEST_GAUNTLET.md  TESTER_SCRIPT.md
scripts/: check_assets.py  make_release_zip.ps1  sample_prompts.py  verify_release_zip.ps1
storyseed_app/: __init__.py  app.py  engine.py  safety.py  storage.py
storyseed_app/seeds/: classroom_default.json
storyseed_app/static/: app.css  app.js
storyseed_app/static/assets/: manifest.json
storyseed_app/templates/: index.html
tests/: test_app_smoke.py  test_assets_manifest.py  test_engine.py  test_public_readiness.py  test_safety.py  test_storage.py  test_ui_contract.py
